[gd_scene load_steps=20 format=2]

[ext_resource path="res://warrior/zombie.gd" type="Script" id=1]
[ext_resource path="res://warrior/SkRun.png" type="Texture" id=2]
[ext_resource path="res://warrior/SkIdle.png" type="Texture" id=3]
[ext_resource path="res://enemyInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/PawnSense.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/patrol.tscn" type="PackedScene" id=6]
[ext_resource path="res://collision/enemyCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://collision/hurtBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://collision/hitBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://warrior/skDeath.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=8]
radius = 2.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.0
height = 12.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 77, 25.5 )

[sub_resource type="CircleShape2D" id=11]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 1.0
height = 10.0

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "skDeath"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12 ]
}

[sub_resource type="Animation" id=14]
resource_name = "skIdle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]
resource_name = "skRun"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="zombie" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.401876, 0.4 )
texture = ExtResource( 2 )
hframes = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="hurtBox" parent="." instance=ExtResource( 8 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtBox" index="0"]
rotation = 1.5708
shape = SubResource( 9 )

[node name="enemyInfo" parent="." instance=ExtResource( 4 )]
max_health = 4

[node name="PawnSense" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PawnSense" index="0"]
modulate = Color( 1, 1, 1, 0.564706 )
shape = SubResource( 10 )

[node name="hitBox" parent="." instance=ExtResource( 9 )]
collision_mask = 4

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2( -7, 0 )
shape = SubResource( 11 )

[node name="enemyCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="enemyCollision" index="0"]
position = Vector2( 1, 6 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="patrol" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/skDeath = SubResource( 16 )
anims/skIdle = SubResource( 14 )
anims/skRun = SubResource( 15 )

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="killEnemy" from="enemyInfo" to="." method="_on_enemyInfo_killEnemy"]

[editable path="hurtBox"]
[editable path="PawnSense"]
[editable path="hitBox"]
[editable path="enemyCollision"]
